@@ -118,22 +118,24 @@
 
   (defcustom title-keymap (bind-keys (make-keymap)
 				     "Button3-Off" 'raise-lower-window
+				     "Button3-Move" 'move-window-interactively
+				     "Button3-Click" 'tab-release-window
 				     "Button2-Move" 'resize-window-interactively
-				     "Button1-Off2" 'toggle-window-shaded
-				     "Button1-Move" 'move-window-interactively
 				     "Button2-Off" 'tab-add-to-group
-                                     "C-Button2-Off" 'tabgroup-add-to-group)
+				     "C-Button2-Off" 'tabgroup-add-to-group
+				     "Button1-Off2" 'toggle-window-shaded
+				     "Button1-Move" 'move-window-interactively)
     "Keymap of window title bar. Mouse-bindings only."
     :group bindings
     :type keymap)
 
   (defcustom tabbar-keymap (bind-keys (make-keymap)
-				      "Button1-Off2" 'toggle-window-shaded
-				      "Button1-Move" 'move-window-interactively
-				      "Button2-Off" 'tab-add-to-group
-                                      "C-Button2-Off" 'tabgroup-add-to-group
+				      "Button3-Move" 'move-window-interactively
 				      "Button3-Click" 'tab-release-window
-				      "Button3-Move" 'move-window-interactively)
+				      "Button2-Off" 'tab-add-to-group
+				      "C-Button2-Off" 'tabgroup-add-to-group
+				      "Button1-Off2" 'toggle-window-shaded
+				      "Button1-Move" 'move-window-interactively)
     "Keymap of window tabbar. Mouse-bindings only."
     :group bindings
     :type keymap)
