@@ -18,6 +18,9 @@
 	* themes/gradient-tabbed/theme.jl: support for tab-system as of 1.9.1
 	[fuchur]
 
+	* lisp/sawfish/wm/keymaps.jl: improved default keymap for titlebar and
+	tabbar [fuchur]
+
 2012-08-31  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/tabs/tab.jl: add support for coloring a window-title
 	in a different color, when a window is marked for tabbing [fuchur]
